correct stat section responsive spacing

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -30,18 +30,18 @@ article {
 	border-radius: 1px;
   box-shadow: 0px 4px 30px rgb(120,120,120);
   box-sizing: border-box;
-  height: 906px;
   margin: 0 auto;
   margin-bottom: 15px;
-  padding: 75px;
+  padding: 75px 30px 75px 30px;
   display: flex;
   flex-direction: column;
-  max-width: 700px;
   width: 100%;
 
-/*  @media screen and (min-width: 830px) {
-  	width: 700px;
-  }*/
+ @media screen and (min-width: 690px) {
+  	height: 906px;
+  	max-width: 700px;
+  	padding: 75px;
+  }
 }
 
 .container-centered {
@@ -53,19 +53,18 @@ article {
 #front-page {
 	flex-direction: column;
 	align-items: center;
-
-	h1 {
-		align-self: center;
-		margin: 2rem;
-	}
 }
 
 h1 {	
 	font-family: serif;
-	font-size: 4rem;
+	font-size: 2.5rem;
   font-weight: lighter;
   line-height: 1.5rem;
   margin: 0;
+
+  @media screen and (min-width: 550px) {
+  	font-size: 4rem;
+  }
 }
 
 h2 {
@@ -77,10 +76,18 @@ h2 {
 
 h3 {
 	font-family: sans-serif;
-	font-size: 1rem;
+	font-size: 0.9rem;
 	font-weight: lighter;
 	line-height: 1.5rem;
 	text-transform: uppercase;
+
+/*	@media screen and (min-width: 450px) {
+  	font-size: 0.9rem;
+  }*/
+
+	@media screen and (min-width: 550px) {
+  	font-size: 1rem;
+  }
 }
 
 h4 {
@@ -151,7 +158,7 @@ nav {
 
 .sans {
 	font-family: sans-serif;
-	font-size: 0.7rem;
+	font-size: 0.9rem;
 	font-weight: bold;
 }
 
@@ -160,6 +167,11 @@ nav {
 	font-size: 9px;
 	position: relative;
 }
+
+.hide {
+	display: none;
+}
+
 .nav-mobile-expanded {
 	background-color: rgb(240,240,240);
 	border-top: 2px solid rgb(50,50,50);
@@ -168,8 +180,8 @@ nav {
 	position: fixed;
 	top: 70px;
 	right: 0;
+	padding-right: 25px;
 	height: 350px;
-	width: 33%;
 	white-space: nowrap;
 
 	ul {
@@ -177,7 +189,7 @@ nav {
 		line-height: 3.25rem;
 	}
 
-	@media screen and (min-width: 830px) {
+	@media screen and (min-width: 890px) {
 		display: none;
 		width: 0;
 		height: 0;
@@ -190,35 +202,30 @@ nav {
 .nav {
 	float: left;
 	display: flex;
-	/*justify-content: space-between;*/
 	padding-left: 25px;
 }
 
 #nav-mobile {
 	display: flex;
 	justify-content: space-between;
-	width: 100%;
-	padding-right: 60px;
+	padding-left: 25px;
+	padding-right: 25px;
 
-	.fa-bars {
-		font-size: 1.2rem;
-	}
-
-/*	ul {
-		padding-left: 25px;
-		padding-right: 25px;
-	}*/
-
-	@media screen and (min-width: 830px) {
+	@media screen and (min-width: 890px) {
 		display: none;
 		height: 0;
 	}
 }
 
-#nav-left {
-	display: none;
+.fa-bars {
+	font-size: 1.2rem;
+}
 
-	@media screen and (min-width: 830px) {
+#nav-desktop {
+	display: none;
+	width: 0;
+
+	@media screen and (min-width: 890px) {
 		float: left;
 		display: flex;
 		justify-content: space-between;
@@ -304,18 +311,23 @@ table {
 
 #stats {
 	display: flex;
-	justify-content: space-between;
+	justify-content: space-evenly;
 	text-align: center;
 	margin-top: 30px;
 	margin-bottom: 30px;
+	width: 100%;
 }
 
 .stat {
-	padding: 10px;
-	padding-left: 30px;
-	padding-right: 30px;
+	padding-top: 10px;
+	padding-bottom: 10px;
 	display: flex;
 	flex-direction: column;
+
+	h1 {
+		align-self: center;
+		margin: 1.5rem;
+	}
 }
 
 .stat-header {
@@ -332,7 +344,7 @@ table {
 	background-image: url('./assets/img/01-book.jpg');
 }
 
-#bucket {
+.bucket-img {
 	background-image: url('assets/img/bucket.png');
 	background-size: cover;
 	height: 260px;
@@ -375,9 +387,11 @@ table {
 	line-height: 1.5rem;
 }
 
-/*.section-drop {
-	margin-top: 50px;
-}*/
+.underline {
+	text-decoration: underline;
+	font-family: sans-serif;
+	font-size: 0.9rem;
+}
 
 
 
